--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,19 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.12</version>
+    <version>2.7.5</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>edu.syr.qdr.annorep</groupId>
   <artifactId>ARServer</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <name>AnnoRep Server</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
     <java.version>11</java.version>
   </properties>
+ 
 
   <dependencies>
     <dependency>
@@ -64,11 +65,13 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
-    </dependency>
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <optional>true</optional>
+</dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -83,55 +86,75 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
-      <version>4.5.6</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
     <dependency>
-      <groupId>javax.json</groupId>
-      <artifactId>javax.json-api</artifactId>
-      <version>1.1.4</version>
+        <groupId>jakarta.json</groupId>
+        <artifactId>jakarta.json-api</artifactId>
+        <version>2.1.1</version>
     </dependency>
-    <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.json</artifactId>
-      <version>1.1.4</version>
-    </dependency>
+        
+
+    <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
+<dependency>
+    <groupId>org.eclipse.parsson</groupId>
+    <artifactId>parsson</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
 
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>4.1.2</version>
+      <version>5.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>4.1.2</version>
+      <version>5.2.0</version>
     </dependency>
     <dependency>
       <groupId>fr.opensagres.xdocreport</groupId>
       <artifactId>fr.opensagres.poi.xwpf.converter.pdf</artifactId>
-      <version>2.0.2</version>
+      <version>2.0.4</version>
     </dependency>
     <dependency>
+         <groupId>com.aspose</groupId>
+         <artifactId>aspose-words</artifactId>
+         <version>22.10</version>
+         <classifier>jdk17</classifier>
+      </dependency>
+    <dependency>
       <groupId>org.docx4j</groupId>
-      <artifactId>docx4j</artifactId>
-      <version>6.1.2</version>
+      <artifactId>docx4j-core</artifactId>
+      <version>8.3.8</version>
     </dependency>
+<dependency>
+  <groupId>org.docx4j</groupId>
+  <artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
+  <version>8.3.8</version>
+</dependency>
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
       <version>3.0.0-RC1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/fontbox -->
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>fontbox</artifactId>
+    <version>3.0.0-RC1</version>
+</dependency>
+    
     <dependency>
       <groupId>com.github.jai-imageio</groupId>
       <artifactId>jai-imageio-core</artifactId>
@@ -140,13 +163,13 @@
     <dependency>
       <groupId>com.github.jai-imageio</groupId>
       <artifactId>jai-imageio-jpeg2000</artifactId>
-      <version>1.3.0</version>
+      <version>1.4.0</version>
     </dependency>
     <!-- Optional : JBIG2 images -->
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
       <artifactId>jbig2-imageio</artifactId>
-      <version>3.0.3</version>
+      <version>3.0.4</version>
     </dependency>
   </dependencies>
   <build>
@@ -173,5 +196,12 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+  <repository>
+         <id>AsposeJavaAPI</id>
+         <name>Aspose Java API</name>
+         <url>https://releases.aspose.com/java/repo/</url>
+      </repository> 
+   </repositories>
 
 </project>
