--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
       <artifactId>jbig2-imageio</artifactId>
       <version>3.0.4</version>
     </dependency>
+    <dependency>
+  <groupId>org.jodconverter</groupId>
+  <artifactId>jodconverter-local</artifactId>
+  <version>4.4.4</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
