--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>edu.syr.qdr.annorep</groupId>
     <artifactId>ARServer</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.4</version>
     <name>AnnoRep Server</name>
     <description>Demo project for Spring Boot</description>
     <properties>
